--- a/Manigest.Core/Manigest.Core.csproj
+++ b/Manigest.Core/Manigest.Core.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Guna.UI2.WinForms" Version="2.0.4.4" />
     <PackageReference Include="MySql.Data" Version="8.0.31" />
   </ItemGroup>
 
