--- a/aDVanceERP.Core.Seguridad/aDVanceERP.Core.Seguridad.csproj
+++ b/aDVanceERP.Core.Seguridad/aDVanceERP.Core.Seguridad.csproj
@@ -37,4 +37,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="MVP\Vistas\CuentaUsuario\Plantillas\" />
+  </ItemGroup>
+
 </Project>
