--- a/aDVanceERP.Core.Extension/aDVanceERP.Core.Extension.csproj
+++ b/aDVanceERP.Core.Extension/aDVanceERP.Core.Extension.csproj
@@ -8,14 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Guna.UI2.WinForms" Version="2.0.4.4" />
-    <PackageReference Include="MySql.Data" Version="8.0.31" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="app.ver">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <ProjectReference Include="..\aDVanceERP.Core\aDVanceERP.Core.csproj" />
   </ItemGroup>
 
 </Project>
