--- a/aDVanceERP.Modulos.Contactos/aDVanceERP.Modulos.Contactos.csproj
+++ b/aDVanceERP.Modulos.Contactos/aDVanceERP.Modulos.Contactos.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\aDVanceERP.Core.Seguridad\aDVanceERP.Core.Seguridad.csproj" />
     <ProjectReference Include="..\aDVanceERP.Core\aDVanceERP.Core.csproj" />
   </ItemGroup>
 
