--- a/aDVanceERP.Modulos.Ventas/aDVanceERP.Modulos.Ventas.csproj
+++ b/aDVanceERP.Modulos.Ventas/aDVanceERP.Modulos.Ventas.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\aDVanceERP.Core.Seguridad\aDVanceERP.Core.Seguridad.csproj" />
     <ProjectReference Include="..\aDVanceERP.Core\aDVanceERP.Core.csproj" />
   </ItemGroup>
 
