Terminada la implementación del sistema de notificaciones

--- a/aDVanceERP.Core.Seguridad/aDVanceERP.Core.Seguridad.csproj
+++ b/aDVanceERP.Core.Seguridad/aDVanceERP.Core.Seguridad.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\aDVanceERP.Core.Mensajes\aDVanceERP.Core.Mensajes.csproj" />
     <ProjectReference Include="..\aDVanceERP.Core\aDVanceERP.Core.csproj" />
   </ItemGroup>
 
