--- a/aDVanceERP.Desktop/aDVanceERP.Desktop.csproj
+++ b/aDVanceERP.Desktop/aDVanceERP.Desktop.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\aDVanceERP.Core.Mensajes\aDVanceERP.Core.Mensajes.csproj" />
     <ProjectReference Include="..\aDVanceERP.Core.Seguridad\aDVanceERP.Core.Seguridad.csproj" />
     <ProjectReference Include="..\aDVanceERP.Core\aDVanceERP.Core.csproj" />
     <ProjectReference Include="..\aDVanceERP.Modulos.Contactos\aDVanceERP.Modulos.Contactos.csproj" />
