--- a/aDVanceERP.Core.Mensajes/aDVanceERP.Core.Mensajes.csproj
+++ b/aDVanceERP.Core.Mensajes/aDVanceERP.Core.Mensajes.csproj
@@ -8,13 +8,22 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="MVP\Modelos\" />
-    <Folder Include="MVP\Presentadores\" />
-    <Folder Include="MVP\Vistas\MensajeFlotante\Plantillas\" />
+    <ProjectReference Include="..\aDVanceERP.Core\aDVanceERP.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\aDVanceERP.Core\aDVanceERP.Core.csproj" />
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
