--- a/aDVanceERP.Modulos.CompraVenta/aDVanceERP.Modulos.CompraVenta.csproj
+++ b/aDVanceERP.Modulos.CompraVenta/aDVanceERP.Modulos.CompraVenta.csproj
@@ -32,4 +32,8 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="MVP\Vistas\Mensajeria\" />
+  </ItemGroup>
+
 </Project>
