Update Fix Mensajeria
Campletados los cambios para la inclusión de mensajería en las ventas.

--- a/aDVanceERP.Modulos.CompraVenta/aDVanceERP.Modulos.CompraVenta.csproj
+++ b/aDVanceERP.Modulos.CompraVenta/aDVanceERP.Modulos.CompraVenta.csproj
@@ -33,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="MVP\Vistas\Mensajeria\" />
+    <Folder Include="MVP\Vistas\Mensajeria\Plantillas\" />
   </ItemGroup>
 
 </Project>
