Avances en el backend de la vista del terminal de ventas.

--- a/aDVancePOS.Desktop/aDVancePOS.Desktop.csproj
+++ b/aDVancePOS.Desktop/aDVancePOS.Desktop.csproj
@@ -18,6 +18,8 @@
     <ProjectReference Include="..\aDVanceERP.Core.Mensajes\aDVanceERP.Core.Mensajes.csproj" />
     <ProjectReference Include="..\aDVanceERP.Core.Seguridad\aDVanceERP.Core.Seguridad.csproj" />
     <ProjectReference Include="..\aDVanceERP.Core\aDVanceERP.Core.csproj" />
+    <ProjectReference Include="..\aDVanceERP.Modulos.CompraVenta\aDVanceERP.Modulos.CompraVenta.csproj" />
+    <ProjectReference Include="..\aDVancePOS.Modulos.TerminalVenta\aDVancePOS.Modulos.TerminalVenta.csproj" />
   </ItemGroup>
 
   <ItemGroup>
