--- a/aDVanceERP.BluetoothScanner/aDVanceSCANNER.csproj
+++ b/aDVanceERP.BluetoothScanner/aDVanceSCANNER.csproj
@@ -15,4 +15,7 @@
   <ItemGroup>
     <PackageReference Include="ZXing.Net.Mobile" Version="2.4.1" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="MVP\Modelos\" />
+  </ItemGroup>
 </Project>
