--- a/aDVanceERP.Modulos.Inventario/aDVanceERP.Modulos.Inventario.csproj
+++ b/aDVanceERP.Modulos.Inventario/aDVanceERP.Modulos.Inventario.csproj
@@ -13,9 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="MVP\Vistas\Menu\VistaMenuInventario.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Update="MVP\Vistas\Menu\VistaMenuInventario.cs" />
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
