--- a/aDVancePOS.Desktop/aDVancePOS.Desktop.csproj
+++ b/aDVancePOS.Desktop/aDVancePOS.Desktop.csproj
@@ -28,9 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="MVP\Vistas\ContenedorModulos\VistaContenedorModulos.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Update="MVP\Vistas\ContenedorModulos\VistaContenedorModulos.cs" />
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
