Avances en la implementación de los pagos y mensajería de la orden de compra

--- a/aDVancePOS.Desktop/aDVancePOS.Desktop.csproj
+++ b/aDVancePOS.Desktop/aDVancePOS.Desktop.csproj
@@ -19,6 +19,7 @@
     <ProjectReference Include="..\aDVanceERP.Core.Seguridad\aDVanceERP.Core.Seguridad.csproj" />
     <ProjectReference Include="..\aDVanceERP.Core\aDVanceERP.Core.csproj" />
     <ProjectReference Include="..\aDVanceERP.Modulos.CompraVenta\aDVanceERP.Modulos.CompraVenta.csproj" />
+    <ProjectReference Include="..\aDVanceERP.Modulos.Contactos\aDVanceERP.Modulos.Contactos.csproj" />
     <ProjectReference Include="..\aDVancePOS.Modulos.TerminalVenta\aDVancePOS.Modulos.TerminalVenta.csproj" />
   </ItemGroup>
 
