--- a/aDVanceERP.PatchDB/aDVanceERP.PatchDB.csproj
+++ b/aDVanceERP.PatchDB/aDVanceERP.PatchDB.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <StartupObject>aDVanceERP.PatchDB.Program</StartupObject>
-    <BaseOutputPath>D:\Carlitos\Proyectos\[PROJECT] aDVance ERP\aDVanceERP\aDVanceERP.Desktop\bin\</BaseOutputPath>
+    <BaseOutputPath>D:\Carlitos\Proyectos\[PROJECT] aDVance ERP\aDVanceERP\aDVanceERP.Desktop\bin</BaseOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
