--- a/aDVanceERP.Core/aDVanceERP.Core.csproj
+++ b/aDVanceERP.Core/aDVanceERP.Core.csproj
@@ -1,23 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>net7.0-windows7.0</TargetFramework>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="CuoreUI.Winforms" Version="2025.4.25" />
     <PackageReference Include="Guna.UI2.WinForms" Version="2.0.4.4" />
     <PackageReference Include="MySql.Data" Version="8.0.31" />
     <PackageReference Include="PDFsharp" Version="6.1.1" />
   </ItemGroup>
-
   <ItemGroup>
     <None Update="app.ver">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-
 </Project>
