--- a/aDVanceERP.Core.Mensajes/aDVanceERP.Core.Mensajes.csproj
+++ b/aDVanceERP.Core.Mensajes/aDVanceERP.Core.Mensajes.csproj
@@ -21,4 +21,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Telegram.Bot" Version="22.5.1" />
+  </ItemGroup>
 </Project>
