--- a/aDVanceERP.Modulos.Contactos/aDVanceERP.Modulos.Contactos.csproj
+++ b/aDVanceERP.Modulos.Contactos/aDVanceERP.Modulos.Contactos.csproj
@@ -6,6 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="MVP\Vistas\Empresa\VistaRegistroEmpresa.Designer.cs~RFef695e.TMP" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\aDVanceERP.Core.Seguridad\aDVanceERP.Core.Seguridad.csproj" />
     <ProjectReference Include="..\aDVanceERP.Core\aDVanceERP.Core.csproj" />
   </ItemGroup>
