Instalador actualizado. El instalador crea la regla de firewall para la aplicación al final de la instalación. Adicionada la opción de ejecutar la aplicación una vez terminada la instalación

--- a/aDVanceINSTALL.Desktop/aDVanceINSTALL.Desktop.csproj
+++ b/aDVanceINSTALL.Desktop/aDVanceINSTALL.Desktop.csproj
@@ -17,6 +17,15 @@
       <Isolated>false</Isolated>
       <EmbedInteropTypes>true</EmbedInteropTypes>
     </COMReference>
+    <COMReference Include="FwCplLua">
+      <WrapperTool>tlbimp</WrapperTool>
+      <VersionMinor>0</VersionMinor>
+      <VersionMajor>1</VersionMajor>
+      <Guid>b9c76e7b-d029-44eb-896f-f02fc6e9abd5</Guid>
+      <Lcid>0</Lcid>
+      <Isolated>false</Isolated>
+      <EmbedInteropTypes>true</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="icons8_software_installer.ico" />
