--- a/aDVanceSCANNER/aDVanceSCANNER.csproj
+++ b/aDVanceSCANNER/aDVanceSCANNER.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net8.0-android</TargetFramework>
-    <SupportedOSPlatformVersion>25</SupportedOSPlatformVersion>
+	<TargetSdkVersion>34</TargetSdkVersion>
+    <SupportedOSPlatformVersion>30</SupportedOSPlatformVersion>
     <OutputType>Exe</OutputType>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
