Adicionada la eliminación de movimientos de caja al eliminar una caja

--- a/aDVanceERP.Modulos.Finanzas/aDVanceERP.Modulos.Finanzas.csproj
+++ b/aDVanceERP.Modulos.Finanzas/aDVanceERP.Modulos.Finanzas.csproj
@@ -25,4 +25,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="MVP\Vistas\Caja\Plantillas\" />
+  </ItemGroup>
 </Project>
