--- a/aDVanceERP.Modulos.Finanzas/aDVanceERP.Modulos.Finanzas.csproj
+++ b/aDVanceERP.Modulos.Finanzas/aDVanceERP.Modulos.Finanzas.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.12.1" />
     <PackageReference Include="QRCoder" Version="1.6.0" />
   </ItemGroup>
   <ItemGroup>
