--- a/aDVancePOS.Desktop/aDVancePOS.Desktop.csproj
+++ b/aDVancePOS.Desktop/aDVancePOS.Desktop.csproj
@@ -25,6 +25,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Update="MVP\Vistas\ContenedorModulos\VistaContenedorModulos.cs" />
+    <Compile Update="MVP\Vistas\Temp\VistaRegistroProductoP3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="MVP\Vistas\Temp\VistaRegistroProductoP4.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="MVP\Vistas\Temp\VistaRegistroProductoP5.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
