--- a/aDVancePOS.Desktop/aDVancePOS.Desktop.csproj
+++ b/aDVancePOS.Desktop/aDVancePOS.Desktop.csproj
@@ -17,6 +17,7 @@
     <ProjectReference Include="..\aDVanceERP.Core\aDVanceERP.Core.csproj" />
     <ProjectReference Include="..\aDVanceERP.Modulos.CompraVenta\aDVanceERP.Modulos.CompraVenta.csproj" />
     <ProjectReference Include="..\aDVanceERP.Modulos.Contactos\aDVanceERP.Modulos.Contactos.csproj" />
+    <ProjectReference Include="..\aDVanceERP.Modulos.Finanzas\aDVanceERP.Modulos.Finanzas.csproj" />
     <ProjectReference Include="..\aDVancePOS.Modulos.TerminalVenta\aDVancePOS.Modulos.TerminalVenta.csproj" />
   </ItemGroup>
   <ItemGroup>
