--- a/aDVancePOS.Mobile/aDVancePOS.Mobile.csproj
+++ b/aDVancePOS.Mobile/aDVancePOS.Mobile.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net8.0-android34.0</TargetFramework>
-    <SupportedOSPlatformVersion>30.0</SupportedOSPlatformVersion>
+    <TargetFramework>net9.0-android</TargetFramework>
+    <SupportedOSPlatformVersion>21</SupportedOSPlatformVersion>
     <OutputType>Exe</OutputType>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -14,17 +14,7 @@
     -->
     <TrimMode>full</TrimMode>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="SQLite-net-pcl" Version="1.8.116" />
-    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.6.0.3" />
-    <PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.3.1" />
-    <PackageReference Include="Xamarin.AndroidX.Lifecycle.ViewModel" Version="2.6.1" />
-    <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.6.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Resources\drawable\" />
   </ItemGroup>
 </Project>
