--- a/aDVanceERP.Core.Seguridad/aDVanceERP.Core.Seguridad.csproj
+++ b/aDVanceERP.Core.Seguridad/aDVanceERP.Core.Seguridad.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\aDVanceERP.Core.Datos\aDVanceERP.Core.Datos.csproj" />
     <ProjectReference Include="..\aDVanceERP.Core.Mensajes\aDVanceERP.Core.Mensajes.csproj" />
     <ProjectReference Include="..\aDVanceERP.Core\aDVanceERP.Core.csproj" />
   </ItemGroup>
