--- a/aDVanceERP.Modulos.CompraVenta/aDVanceERP.Modulos.CompraVenta.csproj
+++ b/aDVanceERP.Modulos.CompraVenta/aDVanceERP.Modulos.CompraVenta.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="QRCoder" Version="1.6.0" />
   </ItemGroup>
   <ItemGroup>
