avances en el taller

--- a/aDVanceERP.Modulos.Taller/aDVanceERP.Modulos.Taller.csproj
+++ b/aDVanceERP.Modulos.Taller/aDVanceERP.Modulos.Taller.csproj
@@ -17,6 +17,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Update="Vistas\CostosProduccion\VistaRegistroDatosGenerales.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="Vistas\CostosProduccion\VistaRegistroMateriaPrima.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
