--- a/aDVanceERP.Desktop/aDVanceERP.Desktop.csproj
+++ b/aDVanceERP.Desktop/aDVanceERP.Desktop.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\aDVanceERP.Modulos.Finanzas\aDVanceERP.Modulos.Finanzas.csproj" />
     <ProjectReference Include="..\aDVanceERP.Modulos.Inventario\aDVanceERP.Modulos.Inventario.csproj" />
     <ProjectReference Include="..\aDVanceERP.Modulos.CompraVenta\aDVanceERP.Modulos.CompraVenta.csproj" />
+    <ProjectReference Include="..\aDVanceERP.Modulos.Taller\aDVanceERP.Modulos.Taller.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
