--- a/aDVanceERP.Modulos.Taller/aDVanceERP.Modulos.Taller.csproj
+++ b/aDVanceERP.Modulos.Taller/aDVanceERP.Modulos.Taller.csproj
@@ -31,6 +31,12 @@
     <Compile Update="Vistas\OrdenProduccion\VistaTuplaOrdenMateriaPrima.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Update="Vistas\CostosProduccion\VistaTuplaCostoProduccion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="Vistas\Menu\VistaMenuTaller.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
