Avances en el registro de ordenes de produccion

--- a/aDVanceERP.Modulos.Taller/aDVanceERP.Modulos.Taller.csproj
+++ b/aDVanceERP.Modulos.Taller/aDVanceERP.Modulos.Taller.csproj
@@ -36,6 +36,9 @@
     <Compile Update="Vistas\Menu\VistaMenuTaller.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Update="Vistas\OrdenProduccion\VistaRegistroOrdenProduccion.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
