--- a/aDVanceERP.Modulos.Taller/aDVanceERP.Modulos.Taller.csproj
+++ b/aDVanceERP.Modulos.Taller/aDVanceERP.Modulos.Taller.csproj
@@ -24,6 +24,9 @@
     <Compile Update="Vistas\OrdenProduccion\VistaRegistroOrdenProduccion.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Update="Vistas\OrdenProduccion\VistaTuplaDetalleMateriaPrima.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
