Correccion de errores en la nomenclatura de tablas que impedía la realización de ventas

--- a/aDVanceERP.Modulos.Taller/aDVanceERP.Modulos.Taller.csproj
+++ b/aDVanceERP.Modulos.Taller/aDVanceERP.Modulos.Taller.csproj
@@ -24,9 +24,7 @@
     <Compile Update="Vistas\OrdenProduccion\VistaRegistroOrdenProduccion.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Update="Vistas\OrdenProduccion\VistaTuplaOrdenActividadProduccion.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Update="Vistas\OrdenProduccion\VistaTuplaOrdenActividadProduccion.cs" />
     <Compile Update="Vistas\OrdenProduccion\VistaTuplaOrdenGastoIndirecto.cs">
       <SubType>Form</SubType>
     </Compile>
