Cambios desechados por incumplimiento del plazo límite del programa

--- a/aDVanceERP.Core/aDVanceERP.Core.csproj
+++ b/aDVanceERP.Core/aDVanceERP.Core.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="MVP\Modelos\Repositorios\" />
+    <Folder Include="Componentes\" />
     <Folder Include="Repositorios\Modulos\Inventario\" />
   </ItemGroup>
 </Project>
