--- a/aDVanceERP.Core.Mensajes/aDVanceERP.Core.Mensajes.csproj
+++ b/aDVanceERP.Core.Mensajes/aDVanceERP.Core.Mensajes.csproj
@@ -24,4 +24,7 @@
   <ItemGroup>
     <PackageReference Include="Telegram.Bot" Version="22.5.1" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Servicios\" />
+  </ItemGroup>
 </Project>
