--- a/aDVanceERP.Modulos.Inventario/aDVanceERP.Modulos.Inventario.csproj
+++ b/aDVanceERP.Modulos.Inventario/aDVanceERP.Modulos.Inventario.csproj
@@ -23,4 +23,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Documentos\" />
+  </ItemGroup>
 </Project>
