--- a/aDVanceERP.Core/aDVanceERP.Core.csproj
+++ b/aDVanceERP.Core/aDVanceERP.Core.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="ClosedXML" Version="0.105.0" />
     <PackageReference Include="Guna.UI2.WinForms" Version="2.0.4.4" />
     <PackageReference Include="HtmlAgilityPack" Version="1.12.1" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.8" />
     <PackageReference Include="MySql.Data" Version="8.0.31" />
     <PackageReference Include="PDFsharp" Version="6.1.1" />
   </ItemGroup>
