Reubicada y modificada la interfaz de Busqueda de entidades

--- a/aDVanceERP.Core/aDVanceERP.Core.csproj
+++ b/aDVanceERP.Core/aDVanceERP.Core.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Modelos\Interfaces\" />
+    <Folder Include="MVP\Modelos\Plantillas\" />
     <Folder Include="MVP\Modelos\Repositorios\Plantillas\" />
     <Folder Include="Presentadores\Interfaces\" />
     <Folder Include="Servicios\Interfaces\" />
