--- a/aDVanceERP.Core/aDVanceERP.Core.csproj
+++ b/aDVanceERP.Core/aDVanceERP.Core.csproj
@@ -6,6 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Presentadores\Interfaces\**" />
+    <EmbeddedResource Remove="Presentadores\Interfaces\**" />
+    <None Remove="Presentadores\Interfaces\**" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.105.0" />
     <PackageReference Include="Guna.UI2.WinForms" Version="2.0.4.4" />
     <PackageReference Include="HtmlAgilityPack" Version="1.12.1" />
@@ -38,7 +43,6 @@
     <Folder Include="Modelos\Interfaces\" />
     <Folder Include="MVP\Modelos\Plantillas\" />
     <Folder Include="MVP\Modelos\Repositorios\Plantillas\" />
-    <Folder Include="Presentadores\Interfaces\" />
     <Folder Include="Servicios\Interfaces\" />
   </ItemGroup>
 </Project>
