Optimización y reubicación del presentador para las vistas gestión

--- a/aDVanceERP.Core/aDVanceERP.Core.csproj
+++ b/aDVanceERP.Core/aDVanceERP.Core.csproj
@@ -43,6 +43,7 @@
     <Folder Include="Modelos\Interfaces\" />
     <Folder Include="MVP\Modelos\Plantillas\" />
     <Folder Include="MVP\Modelos\Repositorios\Plantillas\" />
+    <Folder Include="MVP\Presentadores\Plantillas\" />
     <Folder Include="Servicios\Interfaces\" />
   </ItemGroup>
 </Project>
