--- a/aDVanceERP.Actualizador/aDVanceERP.Actualizador.csproj
+++ b/aDVanceERP.Actualizador/aDVanceERP.Actualizador.csproj
@@ -1,32 +1,46 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
+    <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <StartupObject>aDVanceERP.Actualizador.Program</StartupObject>
+    <ApplicationIcon>icons8_downloading_updates.ico</ApplicationIcon>
+    <AssemblyName>Actualizador</AssemblyName>
   </PropertyGroup>
+
   <ItemGroup>
-    <Compile Remove="Servicios\**" />
-    <EmbeddedResource Remove="Servicios\**" />
-    <None Remove="Servicios\**" />
+    <Content Include="icons8_downloading_updates.ico" />
   </ItemGroup>
+
   <ItemGroup>
-    <ProjectReference Include="..\aDVanceERP.Core\aDVanceERP.Core.csproj" />
+    <Folder Include="Utilidades\" />
+    <Folder Include="Presentadores\" />
   </ItemGroup>
+
   <ItemGroup>
+    <PackageReference Include="Guna.UI2.WinForms" Version="2.0.4.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Componentes\CustomProgressBar.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
+
   <ItemGroup>
     <EmbeddedResource Update="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Telegram.Bot" Version="22.5.1" />
-  </ItemGroup>
+
 </Project>
